--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Table Tennis</title>
 </head>
 <body>
-    <h1>Classroom Tournament Leaderboard</h1>
+    <h1>Table Tennis</h1>
+    
+    <h2>Classroom Tournament Leaderboard</h2>
 
     <div id = "table" >
         <table>
